Bug 282671 - Marble widget does not compile with MSVC2010
Summary: Marble widget does not compile with MSVC2010
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Microsoft Windows
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-24 11:59 UTC by Bernhard Beschow
Modified: 2011-09-24 12:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-24 11:59:48 UTC
Version:           unspecified (using Devel) 
OS:                MS Windows

Marblewidget (master-branch, Qt 4.7.4) cannot be compiled in MS Visual C++ 2010.

Thanks to Joachim Puhr for reporting.

Reproducible: Didn't try

Steps to Reproduce:
Compile Marble (master).

Actual Results:  
Compilation fails in line 34 in GeoDataParser.h.

GeoDataDocument* geoDataDoc(GeoParser& parser) GEODATA_EXPORT;

Expected Results:  
Compilation should succeed.

Changing line 34 in GeoDataParser.h from

GeoDataDocument* geoDataDoc(GeoParser& parser) GEODATA_EXPORT;

to

GEODATA_EXPORT GeoDataDocument* geoDataDoc(GeoParser& parser);

makes Marble compile again.
Comment 1 Bernhard Beschow 2011-09-24 12:36:55 UTC
Git commit 41e5247356697b5a2eac267da94f085cc37ab974 by Bernhard Beschow.
Committed on 24/09/2011 at 14:10.
Pushed by beschow into branch 'master'.

compile under MSVC 2008 + 2010

Thanks to Anton Chernov for the patch.

BUG: 282671
CCMAIL: chernov.anton.mail@gmail.com
CCMAIL: JOACHIM.PUHR@thalesgroup.com

M  +1    -1    src/lib/geodata/parser/GeoDataParser.h

http://commits.kde.org/marble/41e5247356697b5a2eac267da94f085cc37ab974