compile under MSVC 2008 + 2010

Thanks to Anton Chernov for the patch.

BUG: 282671
CCMAIL: chernov.anton.mail@gmail.com
CCMAIL: JOACHIM.PUHR@thalesgroup.com